fixes scrolling/overflow problems

--- a/style.css
+++ b/style.css
@@ -1,15 +1,6 @@
-html {
-  /*height:100%;
-  overflow: hidden;*/
-}
-body {
-  /*margin:0;
-  padding:0;
-  display:flex;
-  flex-direction: column;
-  height: 100%;*/
+/*body {
   overflow: hidden;
-}
+}*/
 h1 {
   font-family: 'Great Vibes', cursive;
 
